fixed Home layout bugs

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,8 +2,8 @@
 @import './Components//Navbar/Dots';
 @import './Components/Home/Home';
 
-html, body {
-  min-height: 200vh;
+body {
+  min-height: 130vh;
   width: calc(100vw - (100vw - 100%));
   // background-image: linear-gradient(135deg, $turquoise, rgb(44, 188, 231), rgb(64, 160, 224), rgb(73, 73, 255));
   background-image: linear-gradient(135deg, #3FFFFB, rgb(14, 177, 226), rgb(20, 103, 158) 90%, rgb(33, 79, 206));
