--- a/src/Components/Home/_Home.scss
+++ b/src/Components/Home/_Home.scss
@@ -1,11 +1,12 @@
 @import '../../variables';
 
 .homeMainDiv {
-  margin: 100px 30px;
+  margin: 100px 0;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  align-self: center;
   position: absolute;
   z-index: 0;
 }
@@ -109,8 +110,8 @@
   align-items: flex-start;
   max-width: 1500px;
   width: 90vw;
-  min-height: 800px;
-  height: 100%;
+  // min-height: 800px;
+  min-height: 100%;
 }
 
 .homeLeft {
@@ -123,8 +124,8 @@
 
 .postsList {
   width: calc(100% - 10px);
-  height: 100%;
-  min-height: 500px;
+  // min-height: 100%;
+  // min-height: 500px;
   background-color: white;
   box-shadow: 2px 2px 3px rgb(82, 82, 82);
   background: white;
@@ -180,7 +181,7 @@
 
 .homeRight {
   width: 30%;
-  height: 100%;
+  min-height: 100%;
   min-height: 300px;
   background-color: white;
   box-shadow: 2px 2px 3px rgb(82, 82, 82);
