--- a/src/Components/Navbar/_Navbar.scss
+++ b/src/Components/Navbar/_Navbar.scss
@@ -122,7 +122,7 @@
   transition: 1s;
   display: none;
   z-index: -1;
-  background: navy;
+  background: linear-gradient(#131313, #000077, rgb(15, 15, 170));
   flex-direction: column;
   justify-content: flex-end;
   align-items: flex-start;
